<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DorkSearcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search_terms">Search Terms</string>
    <string name="action_news">Latest</string>
    <string name="latest_files">Files</string>
    <string name="latest_exploits">Exploits</string>
    <string name="menu_packetstorm">Packet Storm Security</string>
    <string name="menu_exploitdb">Exploit-DB</string>
    <string name="the_sources">Source</string>
    <string name="action_settings">Settings</string>
    <string name="action_dorks">Google Dorks</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rss_layout_urltext_text">http://rss.slashdot.org/Slashdot/slashdot</string>
    <string name="rss_layout_statustext_text">Updating…</string>
    <string name="rss_layout_download_text">Download</string>
    <string name="dork_items_prompt">Choose a category</string>
    <string name="settings_showfiles">Show Latest Files From PacketStorm Security</string>
    <string name="settings_sync_freq">Synchronize frequency</string>

    <string-array name="settings_freq_entries">
        <item>30 Minutes</item>
        <item>60 Minutes</item>
        <item>2 Hours</item>
        <item>On Demand Only</item>
    </string-array>
    <string-array name="settings_freq_entries_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>0</item>
    </string-array>

    <string name="settings_freq_entries_value_default">0</string>

    <string-array name="dork_items">
        <item>Files Containing Usernames</item>
        <item>Files Containing Juicy Info</item>
        <item>Files Containing Passwords</item>
        <item>Various Connected Devices</item>
        <item>Footholds</item>
        <item>Online Shopping Info</item>
    </string-array>
    <string-array name="dork_providers">
        <item>Google</item>
        <item>Bing</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>Latest Files From PacketStorm Security</item>
        <item>Latest News From PacketStorm Security</item>
        <item>Latest Exploits From Exploit-DB</item>
        <item>Google Dorks</item>
    </string-array>

    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="spinner_prompt">Select</string>
    <string name="choose_source">Choose Source</string>
    <string name="title_activity_xml_feed">XmlFeedActivity</string>

</resources>
