<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cmb.dorksearchr.app.MainActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_help"
        android:title="@string/action_about"
        android:orderInCategory="300"
        android:showAsAction="ifRoom" />

    <!-- Share / will display always -->
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        android:showAsAction="always"
        android:orderInCategory="200"
        android:actionProviderClass="android.widget.ShareActionProvider" />

</menu>
